--- a/angular.json
+++ b/angular.json
@@ -63,6 +63,14 @@
                   "maximumError": "4kb"
                 }
               ]
+            },
+            "mock": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.mock.ts"
+                }
+              ]
             }
           }
         },
@@ -74,6 +82,9 @@
           "configurations": {
             "production": {
               "browserTarget": "hue-frontend:build:production"
+            },
+            "mock": {
+              "browserTarget": "hue-frontend:build:mock"
             }
           }
         },
